fix: overlapping cutout and headline

--- a/ArticleTemplates/assets/scss/garnett-layout/_article--comment.scss
+++ b/ArticleTemplates/assets/scss/garnett-layout/_article--comment.scss
@@ -9,8 +9,12 @@
         }
 
         .headline__byline {
+            display: block;
             font-style: italic;
             font-weight: 100;
+            .byline__author {
+                display: inline;
+            }
         }
         .byline__author {
             display: inline-block;
