--- a/ArticleTemplates/assets/scss/garnett-layout/_base-tone.scss
+++ b/ArticleTemplates/assets/scss/garnett-layout/_base-tone.scss
@@ -44,7 +44,10 @@ body {
             }
             &__image {
                 z-index: 21;
-                background-size: auto 220px;
+                background-size: auto 160px;
+                @include mq($from:col2) {
+                    background-size: auto 220px;
+                }
             }
         }
 
